# resfinder

./: CHANGELOG.md  README.1st.md  pyproject.toml  resfinder  run_resfinder.py
src/: setup.py
src/resfinder/cge/: pointfinder.py
